# kvalobs

./: .arcconfig  .arclint  .cproject  .dockerignore  .gitignore  .project  CHANGELOG  ChangeLog  FIXED_NOTES  INSTALL.main  Makefile  Makefile.am  README  README.trusty  VERSION  autogen.sh  bootstrap.sh  configure-as-for-debian-build.sh  configure.ac  create_container_kvpostgres.sh  eclipse-cpp-google-style.xml  gitref.sh  kvbuild.sh  kvconfig.in  kvdb-setup.debian  libkvutil-perl_2.12.3-1_amd64.deb  metno-bufrtables_1.2.8_all.deb  version-tag.sh  version.sh
kvsupport/: Makefile.am
src/: Makefile  Makefile.am
src/agregator/: AbstractAgregator.cc  AbstractAgregator.h  AgregatorHandler.cc  INSTALL  KvDataFunctors.cc  KvDataFunctors.h  Makefile  agregateDbInit.sh  kvAgregated.conf  main.cc  make.mk  minmax.cc  paramID.h  ra2rr_12.cc  ra2rr_12.h  rr.cc
src/data2kv/: AdminImpl.cc  AdminImpl.h  App.cc  App.h  CollectData.cc  CollectData.h  Makefile  Makefile.am  Makefile.in  NewData.cc  NewData.h  data2kv.cc  kvDataSrcList.cc  kvDataSrcList.h  newfileImpl.cc  newfileImpl.h  signalNewFileApp.cc  signalNewFileApp.h  signalnewfile.cc
src/decode/: Makefile  decode.cc  kvSynopDecoder.cc  kvSynopDecoder.h  synopElements.h
src/kafka-util/: Makefile.am  kvalobs-queue-transfer.cpp  kvsubscribe.cpp
src/kv2kl/: Makefile  SqlHelper.manifest  build.xml  kl2kv.manifest  kl2kvnew.manifest  kv2kl.manifest  kv2klgetdata.manifest  run  run_dateregex
src/kv2kro/: DataReceiverSimpleKro.cc  DataReceiverSimpleKro.h  Makefile  delete_oldfiles.pl  obsInsertTest.pl
src/kv2kro2/: App.cc  App.h  DataReceiver.cc  DataReceiver.h  GetData.cc  GetData.h  Makefile  Makefile.am  Makefile.old  README  kv2kro.cc  obsInsert
src/kv2metdat/: Makefile  Makefile.am  Makefile.bak  kv2metdat.cc
src/kvAgregated/: .cvsignore  AbstractAgregator.cc  AbstractAgregator.h  AgregatorHandler.cc  AgregatorHandler.h  AgregatorRunner.cpp  AgregatorRunner.h  BackProduction.cc  BackProduction.h  GenerateZero.cc  GenerateZero.h  INSTALL  Makefile  Makefile.am  agregateDbInit.sh  kvAgregated.conf  main.cc  minmax.cc  minmax.h  ra2rr_12.cc  ra2rr_12.h  rr.h  times.h
src/kvDataInputd/: ConnectionCache.cc  ConnectionCache.h  DataSrcAmqp.cc  DataSrcAmqp.h  DataSrcApp.cc  DataSrcApp.h  DataSrcImpl.cc  DataSrcImpl.h  DecodeCommand.cc  DecodeCommand.h  DecodeDataCommand.cc  DecodeDataCommand.h  DecoderExecutor.cc  DecoderExecutor.h  INSTALL  InitLogger.cc  KafkaProducerThread.cc  KafkaProducerThread.h  Makefile  Makefile.am  ObservationHandler.cc  ObservationHandler.h  ProducerCommand.cc  ProducerCommand.h  PublishDataCommand.cc  PublishDataCommand.h  RawDataCommand.cc  RawDataCommand.h  createTestData.cc  force.cc  kvDataInputd.cc  kvDataInputd_ExecDecoder_log_cleanup  kvdataclt.cc
src/kvManagerd/: AdminImpl.cc  AdminImpl.h  CheckForMissingObsMessages.cc  CheckForMissingObsMessages.h  CheckedDataCommand.cc  CheckedDataCommand.h  CheckedDataCommandBase.h  CheckedDataHelper.cc  CheckedDataHelper.h  DataIdentifier.cpp  DataIdentifier.h  GenCacheElem.cc  GenCacheElem.h  INSTALL  InitLogger.cc  InitLogger.h  KvalobsDatabaseAccess.cpp  KvalobsDatabaseAccess.h  Makefile.am  ManagerApp.cpp  ManagerApp.h  MissingObsCheck.cc  MissingObsCheck.h  MissingRunner.cpp  MissingRunner.h  NewDataCommand.cc  NewDataCommand.h  NewDataJob.cc  NewDataJob.h  ObservationComplete.cpp  ObservationComplete.h  OneTimeJob.cc  OneTimeJob.h  PreProcessJob.cc  PreProcessJob.h  PreProcessMissingData.cc  PreProcessMissingData.h  PreProcessWorker.cc  PreProcessWorker.h  SelectDataToProcess.cc  (+25 more)
src/kvQabased/: AdminImpl.h  CheckCreator.cc  CheckCreator.h  DataStore.cpp  DataStore.h  InitLogger.cc  InitLogger.h  Makefile  Makefile.am  QaWorkThread.cc  checkrunner.cc  checkrunner.h  kvCronString.cc  kvMetadataTable.cc  kvPerlParser.h  kvPythonInterpreter.cc  kvPythonInterpreter.h  kvQABaseDBConnection.cc  kvQABaseDBConnection.h  kvQABaseMetadata.cc  kvQABaseMetadata.h  kvQABaseMeteodata.cc  kvQABaseMeteodata.h  kvQABaseScriptManager.cc  kvQABaseTypes.h  kvQabased.cc  kvalobscache.cc  qabaseApp.cc  qabaseApp.h
src/kvQabased2/: INSTALL  Makefile  Makefile.am
src/kvQabased_old/: AdminImpl.cc  InitLogger.cc  Makefile.am  QaWorkCommand.h  QaWorkThread.cc  QaWorkThread.h  kvCronString.h  kvQABaseDBConnection.cc  kvQABaseDBConnection.h  kvQabased.cc  qabaseApp.cc  qabaseInputImpl.cc  qabaseInputImpl.h
src/kvQc2/: CheckedDataCommandBase.h  CheckedDataHelper.cc  InitLogger.h  Makefile.am  ProcessControl.cc  ProcessControl.h  ProcessImpl.cc  ProcessImpl.h  Qc2App.cc  Qc2Connection.h  Qc2Main.cc  Qc2Thread.cc  Qc2Thread.h  README  ReadProgramOptions.cc  ReadProgramOptions.h  make.mk
src/kvServiced/: DataReadyCommand.cc  DataReadyCommand.h  DataReadyInputImpl.cc  DataReadyInputImpl.h  INSTALL  InitLogger.cc  InitLogger.h  KeyValSubscriberTransaction.cc  KeyValSubscriberTransaction.h  Makefile  Makefile.am  ObjReaper.cc  ObjReaper.h  ReaperBase.cc  ReaperBase.h  ServiceApp.cc  ServiceApp.h  ServiceSubscriber.cc  ServiceSubscriber.h  SubscriberThread.cc  SubscriberThread.h  kvDataIteratorImpl.cc  kvDataIteratorImpl.h  kvDataNotifySubscriber.cc  kvDataNotifySubscriber.h  kvDataNotifySubscriberImpl.h  kvDataSubscriber.cc  kvDataSubscriber.h  kvDataSubscriberInfo.cc  kvDataSubscriberInfo.h  kvHintSubscriber.h  kvHintSubscriberImpl.h  kvModelDataIteratorImpl.cc  kvModelDataIteratorImpl.h  kvRejectedIteratorImpl.cc  kvRejectedIteratorImpl.h  kvServiceImpl.cc  kvServiceImpl.h  kvServiced.cc  kvSubscriberBase.cc  (+7 more)
src/kvServiced2/: DataCommand.cc  DataCommand.h  DataCommandExt.cc  DataCommandExt.h  DataNotifyCommand.cc  DataNotifyCommand.h  DataNotifyCommandExt.cc  DataNotifyCommandExt.h  DataReadyCommand.cc  DataReadyCommand.h  DataReadyInputImpl.cc  DataReadyInputImpl.h  DataToSubscribers.h  InitLogger.cc  InitLogger.h  Makefile  ObjReaper.cc  ObjReaper.h  PsSubscriberDbHelper.cc  PsSubscriberDbHelper.h  ReaperBase.cc  ReaperBase.h  ServiceApp.cc  ServiceApp.h  ServiceSubscriber.cc  ServiceSubscriber.h  SubscriberCommandBase.h  SubscriberData.cc  SubscriberData.h  (+19 more)
(+3085 files in other folders)
