SUBDIRS = \
	lib \
	service-libs \
	kafka-util \
	data2kv \
	kvDataInputd \
	kvDataInputd/kvdataclt \
	kvQabased \
	kvManagerd \
	model2kv \
	kv2metdat \
	kvalobs_database \
	script \
	kv2kro2 \
	tools/kv2kvparser \
	tools/kvpush \
	tools/kvpull \
	tools/kv2kvDataInputd \
	tools/aexecd \
	tools/nagios
